# sactor

./: .dockerignore  .gitignore  .secret.env.example  Cargo.toml  Dockerfile  README.md  flake.nix  ogg_use.md  pyproject.toml  sactor.default.toml  sactor_proc_macros  update_rust_ast_parser.sh
rust_ast_parser/: Cargo.toml  pyproject.toml  rust-toolchain.toml  rust_ast_parser.pyi  update.sh
rust_ast_parser/src/: lib.rs
sactor/: __init__.py  __main__.py  data_types.py  logging.py  rust_ast_parser.pyi  sactor.py  type_normalization.py  utils.py
sactor/_resources/: __init__.py  libc_scalar_map.txt  sactor.default.toml
sactor/c_parser/: __init__.py  (+8 more)
sactor_proc_macros/: Cargo.toml
tests/: azure_llm.py  mock_llm.py  ollama_llm.py  test_cli_executable_object.py  test_config_sanitizer.py  test_sactor_continue_run.py  test_translate_batch.py  test_type_normalization.py  utils.py
tests/c_examples/cmake_multi/: CMakeLists.txt  run_tests.py  test_cmd.json
tests/c_examples/cmake_multi/include/: math_utils.h  stats.h
tests/c_examples/cmake_multi/result/: batch_summary.json
tests/c_examples/cmake_multi/result/combined/idiomatic/cmake_multi/src/: main.rs  math_utils.rs  stats.rs
tests/c_examples/cmake_multi/result/combined/unidiomatic/cmake_multi/: Cargo.toml
tests/c_examples/cmake_multi/result/combined/unidiomatic/cmake_multi/src/: main.rs  math_utils.rs  stats.rs
tests/c_examples/cmake_multi/result/src__main.c__3a576e09/: idiomatic_failure_info.json  llm_stat.json  llm_stat_idiomatic.json  llm_stat_unidiomatic.json  unidiomatic_failure_info.json
tests/c_examples/cmake_multi/result/src__main.c__3a576e09/test_harness/functions/: main.rs
tests/c_examples/cmake_multi/result/src__main.c__3a576e09/translated_code_idiomatic/: clippy_stat.json  combined.rs
tests/c_examples/cmake_multi/result/src__main.c__3a576e09/translated_code_unidiomatic/: clippy_stat.json  combined.rs
tests/c_examples/cmake_multi/result/src__main.c__3a576e09/translated_code_unidiomatic/functions/: main.rs
tests/c_examples/cmake_multi/result/src__math_utils.c__3c8e7223/: idiomatic_failure_info.json  llm_stat.json  llm_stat_idiomatic.json  llm_stat_unidiomatic.json
tests/c_examples/cmake_multi/result/src__math_utils.c__3c8e7223/test_harness/functions/: add_integers.rs  dot_product.rs  multiply_integers.rs
tests/c_examples/cmake_multi/result/src__math_utils.c__3c8e7223/translated_code_idiomatic/: clippy_stat.json  combined.rs
tests/c_examples/cmake_multi/result/src__math_utils.c__3c8e7223/translated_code_idiomatic/functions/: add_integers.rs  dot_product.rs  multiply_integers.rs
tests/c_examples/cmake_multi/result/src__math_utils.c__3c8e7223/translated_code_idiomatic/specs/: function_name_map.json
tests/c_examples/cmake_multi/result/src__math_utils.c__3c8e7223/translated_code_idiomatic/specs/functions/: add_integers.json  dot_product.json  multiply_integers.json
tests/c_examples/cmake_multi/result/src__math_utils.c__3c8e7223/translated_code_unidiomatic/: clippy_stat.json  combined.rs
tests/c_examples/cmake_multi/result/src__math_utils.c__3c8e7223/translated_code_unidiomatic/functions/: add_integers.rs  dot_product.rs  multiply_integers.rs
tests/c_examples/cmake_multi/result/src__stats.c__6cd55f2c/: config.json  idiomatic_failure_info.json  llm_stat.json  llm_stat_idiomatic.json  llm_stat_unidiomatic.json
tests/c_examples/cmake_multi/result/src__stats.c__6cd55f2c/test_harness/functions/: average.rs  max_value.rs
tests/c_examples/cmake_multi/result/src__stats.c__6cd55f2c/translated_code_idiomatic/: clippy_stat.json  combined.rs
tests/c_examples/cmake_multi/result/src__stats.c__6cd55f2c/translated_code_idiomatic/functions/: average.rs  max_value.rs
tests/c_examples/cmake_multi/result/src__stats.c__6cd55f2c/translated_code_idiomatic/specs/: function_name_map.json
tests/c_examples/cmake_multi/result/src__stats.c__6cd55f2c/translated_code_idiomatic/specs/functions/: average.json  max_value.json
tests/c_examples/cmake_multi/result/src__stats.c__6cd55f2c/translated_code_unidiomatic/: clippy_stat.json  combined.rs
tests/c_examples/cmake_multi/result/src__stats.c__6cd55f2c/translated_code_unidiomatic/functions/: average.rs  max_value.rs
tests/c_examples/cmake_multi/src/: main.c  math_utils.c  stats.c
(+276 files in other folders)
