[project]
name = "sactor"
version = "0.1.0"
description = "Structure-Aware C to Rust Translator"
authors = [
    { name = "Tianyang Zhou", email = "qsdrqs@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.43.0",
    "google-genai>=0.5.0",
    "libclang>=18.1.1",
    "maturin>=1.7.8",
    "ollama>=0.4.5",
    "openai>=1.58.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "tiktoken>=0.8.0",
    "tomli>=2.2.1",
    "litellm>=1.76.1",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.setuptools]
packages = ["sactor"]

[tool.uv]
package = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.maturin]
python-source = '.'
module-name = "sactor.rust_ast_parser"
features = ["pyo3/extension-module"]
manifest-path = "rust_ast_parser/Cargo.toml"
include = [
  { path = "rust-toolchain.toml", format = "sdist" }
]

[dependency-groups]
dev = [
    "autopep8>=2.3.1",
    "debugpy>=1.8.11",
    "isort>=5.13.2",
]

[project.scripts]
sactor = "sactor:__main__.main"
